# multi-agent-workflow

./: BLUEPRINT.md  README.md  pyproject.toml
docs/: usage-guide.md  workflow-detail.md
examples/: ai-context-template.md  coder-skill.md  debug-duel-skill.md  debug-skill.md  leader-agent-apply.md  leader-agent-duel.md  leader-agent-verify.md  leader-orchestration.md  multi-agent-rule.md  nanoworker-setup.md  tester-skill.md  usage-guide.md
nanoworker/: __init__.py  cli.py  config.py  llm.py  prompt.py  runner.py
nanoworker/tools/: __init__.py  base.py  filesystem.py  shell.py
rules/: multi-agent.md
skills/: README.md
skills/debug/: SKILL.md
skills/leader/: SKILL.md  agent-duel.md
skills/opsx/: agent-apply-duel.SKILL.md  agent-apply.SKILL.md  agent-apply.md  agent-change-review.SKILL.md  agent-duel.md  agent-verify.SKILL.md
