[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoworker"
version = "0.1.0"
description = "Lightweight worker agent for multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
nanoworker = "nanoworker.cli:app"
